# django-elastipymemcache

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml  publish.yml  test.yml
django_elastipymemcache/: __init__.py  backend.py  client.py
tests/: conftest.py  settings.py  smoke_test.py  test_aws_elasticache_client.py  test_backend.py  test_client.py  test_configuration_endpoint_client.py
